--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -51,29 +51,21 @@
             <a href="https://www.paypal.com/"><i>paypal</i></a>
         </section>
         <section c-prj2>
-            <figure>
-                <a href="https://drive.google.com/open?id=1AjEDPm_xCM5wqsQfS9cb2iRRsQkmQWTl">G-Drive Public</a>
-            </figure>
             <a b href="https://dribbble.com/zinovi-lipa">Dribble</a>
             <a b href="https://nora-the-sheep.tumblr.com/">Tumblr world pic</a>
             <a href="https://login.mailchimp.com/">mailchimp</a>
         </section>
         <section c-tools>
-            <a href="http://telegra.ph/" class="red bold"><i>telegra.ph</i></a>
-            <a href="https://whimsical.co/N5mPdNPKnDFELwEaCS4Wj">schem-diagram</a>
-            <a href="https://wetransfer.com/"><i>file storage</i></a>
-            <a b href="https://wego.here.com/"><i>City Maps</i></a>
-            <figure>
-                <a href="https://www.google.com/maps/place/Berlin,+Germany/@52.5065133,13.1445545,10z/data=!4m5!3m4!1s0x0:0x42120465b5e3b70!8m2!3d52.5200066!4d13.404954!5m1!1e4"><i>G Maps</i></a>
-                <a href="http://www.1188.lv/satiksme/vilcieni/saraksti?from=R%C4%ABga&from-id=2051475&fc=1&to=Gauja&to-id=2051534&tc=1"><i>satiksme</i></a>
-            </figure>
+            <a dh b href="http://telegra.ph/"><i>telegra.ph</i></a>
+            <a href="https://whimsical.co/N5mPdNPKnDFELwEaCS4Wj">whimsical schemes</a>
+            <a href="http://www.1188.lv/satiksme/vilcieni/saraksti?from=R%C4%ABga&from-id=2051475&fc=1&to=Gauja&to-id=2051534&tc=1"><i>satiksme</i></a>
         </section>
 
 
 
         <section c-dev>
             <a href="https://temp-mail.org/" class="bold"><i>Temporary email</i></a>
-            <a href="https://glvrd.ru/" class="red"><i>Glavred</i></a>
+            <a href="https://wetransfer.com/"><i>file storage</i></a>
             <figure>
                 <a href="http://thepiratebay.org/"><i>pirate bay</i></a>
                 <a href="http://tfile.ru/"><i>tfile.ru</i></a>
@@ -114,14 +106,14 @@
         <!-- - - - - - - - - - - - - - - - - - - - - Audio -->
 
         <section c-dev3>
-            <a b href="https://poolside.fm/"><i>♪♪ Poolside Web-Chill</i></a>
-            <figure mini>
-                <a c href="https://www.youtube.com/watch?v=gfiPOgsNO2M">ATCH</a>
-                <a c href="https://www.youtube.com/watch?v=6uddGul0oAc">TKYO</a>
-                <a c href="https://www.youtube.com/watch?v=5qap5aO4i9A">LOFI</a>
-            </figure>
+            <a c href="https://zlsheepcity.github.io/zlEpic/Tools/utub-music-list/"><i>♪♪ ZLUtub</i></a>
+            <a c href="https://poolside.fm/"><i>♪♪ Poolside Web-Chill</i></a>
         </section>
         <section c-eg2>
+            <figure>
+                <a b href="https://wego.here.com/"><i>City Maps</i></a>
+                <a min href="https://www.google.com/maps/place/Berlin,+Germany/@52.5065133,13.1445545,10z/data=!4m5!3m4!1s0x0:0x42120465b5e3b70!8m2!3d52.5200066!4d13.404954!5m1!1e4"><i>G Maps</i></a>
+            </figure>
             <figure>
                 <a href="http://geacron.com/home-en/">Gea Cron Maps</a>
                 <span a mini>sheepcity/wer1</span>
@@ -172,18 +164,18 @@
                 <a href="http://www.jvetrau.com/">Jury Vetrau</a>
                 <a href="https://www.nngroup.com/articles/"><i>Jacob Nielsen</i></a>
             </figure>
-           <figure>
-               <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪♪ Dev Casts</i></a>
-               <a b href="https://shoptalkshow.com/"><i>♪♪ STS</i></a>
+           <figure c-dev3>
+               <a c href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪♪ Dev Casts</i></a>
+               <a c href="https://shoptalkshow.com/"><i>♪♪ STS</i></a>
            </figure>
         </section>
 
     <!-- - - - - - - - - - - - - - - - - - - - - Science News -->
 
         <section c-news2>
-            <a href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
-            <a href="https://golovanov.net/">golovanov.net</a>
-            <a b href="http://elementy.ru/"><i>elementy.ru</i></a>
+            <a c href="http://elementy.ru/"><i>elementy.ru</i></a>
+            <a c href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
+            <a c href="https://golovanov.net/">golovanov.net</a>
             <a href="http://arzamas.academy/"><i>arzamas</i></a>
             <figure>
                 <a href="https://nplus1.ru/"><i>n+1</i></a>
@@ -199,10 +191,10 @@
                 <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurk</i></a>
                 <a href="https://posmotre.li/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:%D0%A1%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0"><i>posmotre.li</i></a>
             </figure>
+            <a b href="http://svalko.org/"><i>Свалка</i></a>
             <a href="http://thisisnthappiness.com/archive">thisisnthappiness</a>
             <a href="http://langsam.ru/ris/">RIS design blog</a>
             <a href="http://tabletopwhale.com/index.html">Science Illustr.</a>
-            <a b href="http://svalko.org/"><i>Свалка</i></a>
         </section>
 
     <!-- - - - - - - - - - - - - - - - - - - - - Libs -->
@@ -249,6 +241,10 @@
 
             <section c-hq>
                 <figure>
+                    <a href="https://webmaker.app/app/">HTML Editor</a>
+                    <a href="https://www.photopea.com/"><i>Photopea</i></a>
+                </figure>
+                <figure>
                     <a href="https://yqnn.github.io/svg-path-editor/">SVG Path Editor</a>
                     <a href="https://svgartista.net/">SVG Artista</a>
                 </figure>
@@ -275,7 +271,7 @@
                 <a href="https://cloudconvert.com/formats"><i>···</i></a>
             </figure>
             <figure>
-                <a href="https://codepen.io/sosuke/full/Pjoqqp"><i>color··css filters</i></a>
+                <a b href="https://codepen.io/sosuke/full/Pjoqqp"><i>color··css filters</i></a>
             </figure>
         </section>
         <section c-dev>
@@ -288,7 +284,7 @@
                 <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
             </figure>
             <figure>
-                <a href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
+                <a b href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
                 <a href="https://tinypng.com/">PNG</a>
                 <a href="https://online2pdf.com/">PDF</a>
             </figure>
@@ -297,44 +293,27 @@
 
             <section c-hq>
                 <figure>
-                    <a c href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
-                    <a c href="http://veli.ee/colorpedia/"><i>Colorpedia</i></a>
+                    <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
+                    <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
                 </figure>
-                <figure>
-                    <a b href="https://webmaker.app/app/">HTML Editor</a>
-                    <a b href="https://www.photopea.com/"><i>Photopea</i></a>
-                </figure>
+                <a href="https://glvrd.ru/" class="red"><i>Glavred</i></a>
             </section>
 
 
             <section c-dev2>
                 <figure>
-                    <a min mini href="http://jsbin.com/?html,output"><i>jsBin</i></a>
-                    <a min mini href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
-                    <a b href="https://htmlg.com/html-editor/">html wysiwyg</a>
-                </figure>
-                <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
-                <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
-            </section>
-
-            <section c-dev3>
-                <figure>
                     <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
                     <a href="https://wakamaifondue.com/">wakamai</a>
                 </figure>
-                <figure>
-                    <a c href="https://materialdesignicons.com/"><i>Material Icons</i></a>
-                    <a c href="https://material.io/tools/icons/?style=baseline"><i>Old</i></a>
-                </figure>
-                <a href="https://next.json-generator.com/"><i>json generator</i></a>
-                <figure>
-                    <a href="http://html-ipsum.com/">ipsum html</a>
-                    <a href="http://www.niemanlab.org/journo-ipsum/">ipsum journo</a>
-                </figure>
+            </section>
+
+            <section c-dev3>
                 <a href="http://kirillbelyaev.com/all/spaces/">Space chars</a>
-                <section c-hq>
-                <a href="https://github.com/sindresorhus/awesome/#user-content-contents"><i>Frontend awesome</i></a>
-                </section>
+                <a href="http://www.niemanlab.org/journo-ipsum/">ipsum journo</a>
+                <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
+                <figure>
+                    <a href="https://next.json-generator.com/"><i>json generator</i></a>
+                </figure>
             </section>
 
             <figure>
