--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -106,8 +106,9 @@
         <!-- - - - - - - - - - - - - - - - - - - - - Audio -->
 
         <section c-dev3>
-            <a c href="https://zlsheepcity.github.io/zlEpic/Tools/utub-music-list/"><i>♪♪ ZLUtub</i></a>
+            <a c href="../Tools/utub-music-list/index.html"><i>♪♪ ZLUtub</i></a>
             <a c href="https://poolside.fm/"><i>♪♪ Poolside Web-Chill</i></a>
+            <a c href="http://radio.garden/listen/radio-tarab/K0DorlkP">♪♪ radio garden</a>
         </section>
         <section c-eg2>
             <figure>
@@ -158,12 +159,9 @@
                 <a b href="https://habr.com/ru/search/?q=%D0%B4%D0%B0%D0%B9%D0%B4%D0%B6%D0%B5%D1%81%D1%82&target_type=posts&order=date">digest</a>
             </figure>
             <a href="http://alistapart.com/">A List Apart</a>
-            <a href="http://artgorbunov.ru/bb/soviet/">Art Gorbunov</a>
             <a href="http://css-tricks.com/">CSS-Tricks</a>
-            <figure mini>
-                <a href="http://www.jvetrau.com/">Jury Vetrau</a>
-                <a href="https://www.nngroup.com/articles/"><i>Jacob Nielsen</i></a>
-            </figure>
+            <a href="http://artgorbunov.ru/bb/soviet/">Art Gorbunov</a>
+            <a href="https://www.nngroup.com/articles/">Jacob Nielsen</a>
            <figure c-dev3>
                <a c href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪♪ Dev Casts</i></a>
                <a c href="https://shoptalkshow.com/"><i>♪♪ STS</i></a>
@@ -176,9 +174,13 @@
             <a c href="http://elementy.ru/"><i>elementy.ru</i></a>
             <a c href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
             <a c href="https://golovanov.net/">golovanov.net</a>
-            <a href="http://arzamas.academy/"><i>arzamas</i></a>
             <figure>
-                <a href="https://nplus1.ru/"><i>n+1</i></a>
+                <a href="https://nplus1.ru/">n+1</a>
+                <a href="https://www.nkj.ru/">Наука и жизнь</a>
+            </figure>
+            <a href="https://postnauka.ru/">postnauka</a>
+            <figure>
+                <a href="http://arzamas.academy/">arzamas</a>
                 <a href="https://etika.nplus1.ru/">Новая Этика</a>
             </figure>
         </section>
@@ -193,13 +195,16 @@
             </figure>
             <a b href="http://svalko.org/"><i>Свалка</i></a>
             <a href="http://thisisnthappiness.com/archive">thisisnthappiness</a>
-            <a href="http://langsam.ru/ris/">RIS design blog</a>
-            <a href="http://tabletopwhale.com/index.html">Science Illustr.</a>
+            <figure>
+                <a href="http://langsam.ru/ris/">RIS design blog</a>
+                <a href="http://tabletopwhale.com/index.html">Science Illustr.</a>
+            </figure>
         </section>
 
     <!-- - - - - - - - - - - - - - - - - - - - - Libs -->
 
-        <section c-science>
+        <section c-ent>
+            <a href="https://gallerix.ru/album/Antique-Maps">Antique Maps</a>
             <a href="http://parismuseescollections.paris.fr/en">Paris Museums Imgs.</a>
         </section>
 
@@ -277,11 +282,7 @@
         <section c-dev>
             <figure>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/API">Web APIs</a>
-                <a href="https://htmldom.dev/">HTML DOM</a>
-            </figure>
-            <figure>
-                <a href="http://caniuse.com/"><i>Caniuse</i></a>
-                <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
+                <a b href="https://htmldom.dev/">HTML DOM</a>
             </figure>
             <figure>
                 <a b href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
@@ -322,8 +323,12 @@
             </figure>
             <a href="https://developers.facebook.com/tools/debug/">FB debug</a>
             <figure>
-                <a b c href="https://calltoidea.com/">Call to idea</a>
-                <a b c href="http://medialabamsterdam.com/toolkit/"><i>Design methods</i></a>
+                <a b href="http://caniuse.com/"><i>Caniuse</i></a>
+                <a c href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
+            </figure>
+            <figure>
+                <a c href="https://calltoidea.com/">Call to idea</a>
+                <a c href="http://medialabamsterdam.com/toolkit/"><i>Design methods</i></a>
             </figure>
             
 
