--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -311,7 +311,10 @@
             <section c-dev3>
                 <a href="http://kirillbelyaev.com/all/spaces/">Space chars</a>
                 <a href="http://www.niemanlab.org/journo-ipsum/">ipsum journo</a>
-                <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
+                <figure>
+                    <a b href="https://zlsheepcity.github.io/appart/colors.html">Colors</a>
+                    <a min href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Lovers ♥</a>
+                </figure>
                 <figure>
                     <a href="https://next.json-generator.com/"><i>json generator</i></a>
                 </figure>
