paint-order attribute

--- a/Snippets/svg.html
+++ b/Snippets/svg.html
@@ -1,4 +1,14 @@
 
+<!-- - - - - - - - - - - - - - - - - - - - - Paint Order -->
+
+<!-- Default -->
+<path d="..." paint-order="fill stroke" />
+
+<!-- Reversed -->
+<path d="..." paint-order="stroke fill" />
+
+<!-- - - - - - - - - - - - - - - - - - - - - RECT -->
+
 <rect width="1000" height="50"/>
 
 <!-- insert inline svg -->
