--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -237,6 +237,21 @@
             <a c-eg3 href="https://sheeptoday.github.io/web.today/">sheep.today</a>
             <a c-eg1 href="https://kidou-shona.github.io/learning_Shona/">learning Shona</a>
         </section>
+
+
+        <section>
+            <figure>
+            <a href="https://app.slack.com/client/T2X0XBP0W/D02SYL6584S">covæ slak</a>
+            <a href="https://owa.coveainsurance.co.uk/owa/">covæ mail</a>
+            </figure>
+            <a b c href="https://coveaprodcloud.atlassian.net/jira/software/c/projects/MER/boards/1153/backlog?issueLimit=100" >covæ backlog</a>
+            <a href="https://coveaprodcloud.atlassian.net/wiki/spaces/CL/pages/364249361/Data+Model#Overview">Data Model</a>
+            <a href="https://gitlab.tools.digital.coveahosted.co.uk/">GitLab Projects</a>
+        </section>
+        <section c-eg2>
+                <a c href="https://hop.emergn.com/">hop.emergn</a>
+                <a c href="https://startrack.emergn.com/startrack/TimeSheet2">startrack ★</a>
+        </section>
     </atricle>
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
@@ -324,6 +339,7 @@
                 <a href="https://developers.google.com/speed/pagespeed/insights/">G PageSpeed</a>
                 <a href="https://www.webpagetest.org/"><i>WebPageTest</i></a>
             </figure>
+            <a href="https://zlsheepcity.github.io/appart/">HTML Outliner</a>
             <a href="https://developers.facebook.com/tools/debug/">FB debug</a>
             <figure>
                 <a b href="http://caniuse.com/"><i>Caniuse</i></a>
