--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [HEAD CONTENT] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [HEAD CONTENT] -->
 
 
     <title>༼°▽°༽</title>
 
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [HEAD ENGINE] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [HEAD ENGINE] -->
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [HEAD OTHERS] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [HEAD OTHERS] -->
 
 
 </head>
 
 <body class="design">
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [FIRST] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [FIRST] -->
     <article c-tools>
         <section c-tools>
             <figure>
@@ -76,8 +76,8 @@
     </article>
 
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [SECOND] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [SECOND] -->
     <article>
         <section c-hq>
             <figure>
@@ -88,25 +88,23 @@
             </figure>
         </section>
 
-        <!-- - - - - - - - - - - - - - - - - - - - - Sport -->
+        <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Sport -->
 
         <section c-ent>
-            <figure>
-                <a b href="http://livetv.sx/allupcoming/" class="red bold">LiveTV</a>
-            </figure>
             <a href="https://www.volleyballworld.tv/home">Volleyball World</a>
-            <a href="https://www.eurosportplayer.com/">Eurosport Player</a>
+            <a href="https://www.eurosport.com/watch/snooker/">Eurosport</a>
             <figure>
                 <a href="http://www.eurovisionsports.tv/ibu/">IBU TV</a>
                 <a href="http://www.biathlonworld.com/calendar/">IBU Calendar</a>
             </figure>
             <a mini href="http://www.european-athletics.org/calendar/index.html"><i>european athletics calendar</i></a>
+            <a mini href="http://livetv.sx/allupcoming/" class="red bold">LiveTV</a>
         </section>
 
-        <!-- - - - - - - - - - - - - - - - - - - - - Audio -->
+        <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Audio -->
 
         <section c-dev3>
-            <a c href="../Tools/utub-music-list/index.html"><i>♪♪ ZLUtub</i></a>
+            <a dh b c href="../Tools/utub-music-list/index.html"><i>♪♪ ZLUtub</i></a>
             <a c href="https://poolside.fm/"><i>♪♪ Poolside Web-Chill</i></a>
             <a c href="http://radio.garden/listen/radio-tarab/K0DorlkP">♪♪ radio garden</a>
         </section>
@@ -125,29 +123,29 @@
             <span a c> ◈◇ ◾◽ ‹› ←→ ↔ ⚠ ☑ </span>
             <span a c> ▲▼◄► ▾ ▿ ◂ ◃ ▸ ▹ ▴ ▵ </span>
             <span a c> ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂ </span>
-            <figure>
+            <figure c-hq>
                 <a b href="https://unilist.raphaelbastide.com/">U</a>
                 <a c href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
-                <span a c> Māčūļī 💩 ⁐ </span>
+                <span a c c-eg3> Māčūļī 💩 ⁐ </span>
             </figure>
         </section>
         <section c-hq>
-            <figure dh>
+            <figure dh c-eg3>
                 <span a c>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
             </figure>
             <figure>
-                <a c href="dvBookmarks2018.html"><i>dvTul</i></a>
-                <a c href="inet2018.html"><i>inet</i></a>
+                <a c href="dvBookmarks2018.html"><i>dev2018</i></a>
+                <a c href="inet2018.html"><i>net2018</i></a>
             </figure>
         </section>
     </article>
 
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [NEWS] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [NEWS] -->
     <atricle c-news1>
 
-    <!-- - - - - - - - - - - - - - - - - - - - - Dev News -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Dev News -->
 
         <section c-news1>
             <figure>
@@ -168,7 +166,7 @@
            </figure>
         </section>
 
-    <!-- - - - - - - - - - - - - - - - - - - - - Science News -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Science News -->
 
         <section c-news2>
             <a c href="http://elementy.ru/"><i>elementy.ru</i></a>
@@ -185,7 +183,7 @@
             </figure>
         </section>
 
-    <!-- - - - - - - - - - - - - - - - - - - - - Social News -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Social News -->
 
         <section c-news3>
             <a href="http://www.kommersant.ru/rubric/5"><i>Kommersant.ru</i></a>
@@ -201,7 +199,7 @@
             </figure>
         </section>
 
-    <!-- - - - - - - - - - - - - - - - - - - - - Libs -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ Libs -->
 
         <section c-ent>
             <a href="https://gallerix.ru/album/Antique-Maps">Antique Maps</a>
@@ -211,8 +209,8 @@
 
     </atricle>
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [PROJECTS] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [PROJECTS] -->
     <atricle c-prj1>
         <section c-prj0>
             <a b c href="http://hackertyper.com/">[ Hacker Typer ]</a>
@@ -241,8 +239,8 @@
 
     </atricle>
 
-    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
-    <!-- =================================================== [LAST] -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ʕ⊙ᴥ⊙ʔ  -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ [LAST] -->
     <article c-dev>
         <section c-dev>
 
