--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- seed 2023 nutri -->
 
-    <title>nutri</title>
-    <meta name="description" content="template">
+    <title>Nutrient</title>
+    <meta name="description" content="game app">
     <meta name="author"      content="zl">
 
 
@@ -23,8 +23,8 @@
     <meta name="theme-color"             content="#314159">
     <meta name="msapplication-TileColor" content="#314159">
     <meta name="msapplication-TileImage" content="art/icon512.png">
-    <link type="image/png" rel="icon"       href="art/icon512.png">
-    <link rel="apple-touch-icon"            href="art/icon512.png">
+    <link type="image/png" rel="icon"    href="art/icon512.png">
+    <link rel="apple-touch-icon"         href="art/icon512.png">
 
 
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ༼°▽°༽ ~ BOOT SERVICE -->
@@ -69,7 +69,38 @@
 
     <header class="box">
         <h1>Nutrient</h1>
+        <div>kido3-6game</div>
     </header>
+
+    <div class="box">
+       <section>
+        <h4>
+            Components
+        </h4>
+        <div display-text>
+
+            — cover, presentation screens
+            — plate, UI constructor
+            — feedback, knowlege sharing
+            — business, model
+
+        </div>
+        </section>
+    </div>
+
+<!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ SCREEN -->
+    
+<style>
+    .screen {
+        display: block;
+        width: 100%;
+        min-height: 100vh;
+    }
+</style>
+
+<div class="screen" id="Cover">
+    <h2>Cover</h2>
+</div>
 
 
 <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ THE END -->
