--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -22,9 +22,9 @@
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ FAVICON -->
     <meta name="theme-color"             content="#314159">
     <meta name="msapplication-TileColor" content="#314159">
-    <meta name="msapplication-TileImage" content="art/icon512.png">
-    <link type="image/png" rel="icon"    href="art/icon512.png">
-    <link rel="apple-touch-icon"         href="art/icon512.png">
+    <meta name="msapplication-TileImage" content="./art/icon512.png">
+    <link type="image/png" rel="icon"    href="./art/icon512.png">
+    <link rel="apple-touch-icon"         href="./art/icon512.png">
 
 
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ༼°▽°༽ ~ BOOT SERVICE -->
@@ -61,7 +61,7 @@
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ DESIGN -->
     <link
         media="all"
-        href="app/garage48.css"
+        href="./app/garage48.css"
         rel="stylesheet" type="text/css">
 
 </head>
