--- a/suheno/index.html
+++ b/suheno/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- seed 2023 nutri -->
 
-    <title>Suheno</title>
+    <title>Suhenu</title>
     <meta name="description" content="game app">
     <meta name="author"      content="zl">
 
@@ -68,7 +68,7 @@
 <body class="box use-colors colors--swed-third">
 
     <header class="box">
-        <h1>Suheno</h1>
+        <h1>Suhenu</h1>
     </header>
 
 
