--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -29,7 +29,7 @@
 
     <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ༼°▽°༽ ~ BOOT SERVICE -->
     <style>
-        html       { margin:0; padding:0  0.25rem; }
+        html       { margin:0; padding:0; }
         body       { margin:0; padding:0; height:auto; width:100%; }
         img,svg,hr { margin:0; border: 0; max-width:100%; }
         body       { overflow-y:scroll; }
@@ -58,14 +58,18 @@
 </noscript>
 
 
-    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ DESIGN -->
+    <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ CSS COMPONENTS -->
     <link
         media="all"
         href="./app/garage48.css"
         rel="stylesheet" type="text/css">
+    <link
+        media="all"
+        href="./app/plate.css"
+        rel="stylesheet" type="text/css">
 
 </head>
-<body class="box use-colors colors--swed">
+<body class="use-colors colors--swed">
 
     <header class="box">
         <h1>Nutrient</h1>
@@ -81,6 +85,7 @@
 
             — cover, presentation screens
             — plate, UI constructor
+              <a href="#Plate">GO SCREEN</a>
             — feedback, knowlege sharing
             — business, model
 
@@ -88,20 +93,45 @@
         </section>
     </div>
 
-<!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ SCREEN -->
-    
-<style>
-    .screen {
-        display: block;
-        width: 100%;
-        min-height: 100vh;
-    }
-</style>
+<!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ COVER -->
 
 <div class="screen" id="Cover">
     <h2>Cover</h2>
 </div>
 
+<!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ PLATE -->
+
+<div class="screen use-colors colors--ivory" id="Plate">
+    <div class="PlateWrap">
+        <header class="box title">
+            <div>Plate</div>
+        </header>
+        <footer class="box title">
+            <h4>footer</h4>
+        </footer>
+        <section class="box itemsA">
+<!--
+            <figure class="box"><img src="./art/plate-item.svg" alt="plate item picture"></figure>
+-->
+        </section>
+        <section class="box itemsB"></section>
+        <section class="plateA">
+            <img src="./art/Plate_new.png" alt="">
+        </section>
+        <section class="plateB">
+           <div class="features">
+              <div><h4>A:</h4> <div class="FeatureValue FeatureValueA"></div></div>
+              <div><h4>B:</h4> <div class="FeatureValue FeatureValueB"></div></div>
+              <div><h4>C:</h4> <div class="FeatureValue FeatureValueC"></div></div>
+           </div>
+        </section>
+    </div>
+</div>
+
+<script src="./app/plate.js"></script>
+<script>
+    
+</script>
 
 <!-- ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ THE END -->
 </body>
