kido eat button

--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -104,10 +104,10 @@
 <div class="screen use-colors colors--ivory" id="Plate">
     <div class="PlateWrap">
         <header class="box title">
-            <div>Plate</div>
+            <div>Kido</div>
         </header>
         <footer class="box title">
-            <h4>footer</h4>
+<!--            <h4>footer</h4>-->
         </footer>
         <section class="box itemsA">
 <!--
@@ -117,12 +117,16 @@
         <section class="box itemsB"></section>
         <section class="plateA">
             <img src="./art/Plate_new.png" alt="">
+            <div class="items"></div>
         </section>
         <section class="plateB">
+           <div class="box title">
            <div class="features">
               <div><h4>A:</h4> <div class="FeatureValue FeatureValueA"></div></div>
               <div><h4>B:</h4> <div class="FeatureValue FeatureValueB"></div></div>
               <div><h4>C:</h4> <div class="FeatureValue FeatureValueC"></div></div>
+           </div>
+           <div class="button">Eat</div>
            </div>
         </section>
     </div>
