kido mvp checkout2

--- a/kid3-6game/index.html
+++ b/kid3-6game/index.html
@@ -122,11 +122,11 @@
         <section class="plateB">
            <div class="box title">
            <div class="features">
-              <div><h4>A:</h4> <div class="FeatureValue FeatureValueA"></div></div>
-              <div><h4>B:</h4> <div class="FeatureValue FeatureValueB"></div></div>
-              <div><h4>C:</h4> <div class="FeatureValue FeatureValueC"></div></div>
+              <div><h4>BALANCE:</h4> <div class="FeatureValue FeatureValueA"></div></div>
+              <div><h4>PROTEIN:</h4> <div class="FeatureValue FeatureValueB"></div></div>
+              <div><h4>SUGAR:</h4> <div class="FeatureValue FeatureValueC"></div></div>
            </div>
-           <div class="button">Eat</div>
+           <div class="button">EAT!</div>
            </div>
         </section>
     </div>
