--- a/suheno/index.html
+++ b/suheno/index.html
@@ -68,7 +68,7 @@
 <body class="box use-colors colors--swed-third">
 
     <header class="box">
-        <h1>Suhenu</h1>
+        <h1>SUHENU FOCO</h1>
     </header>
 
 
